syntax = "proto3";
package cluster;
import "github.com/AsynkronIT/protoactor-go/process/protos.proto";

message TakeOwnership {
    process.PID pid = 1;
    string name = 2;
}

message GrainRequest {
  string method = 1;
  bytes message_data = 2;
}

message GrainResponse {
  bytes message_data = 1;
}

message GrainErrorResponse {
    string err = 1;
}